--- a/bio.html
+++ b/bio.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
-	<h1> A Short Biography </h1>
-	<p> I love climbing mountains and wrangling unicorns </p>
+	<h1> Ross Maxwell Kamen </h1>
+	<h2> A Short Biography </h2>
+	<p> Ross Maxwell Kamen is a stern yet kind individual from Wilmington, Delaware. He majors in Phlofolophopy with a concentration in Snickwidgets. In his free time he enjoys excavating mountains and wrangling unicorns. </p>
 </body>
