--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title> A Short Biography </title>
-	<link href="portfolio.css" />
+	<link href="portfolio.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
